macrostruttura di "index.html"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     </head>
 
     <body>
-        
+        <!-- HEADER -->
+        <header>
+
+        </header>
+        <!-- FINE HEADER -->
+        <!-- MAIN -->
+        <main>
+
+        </main>
+        <!-- FINE MAIN -->
     </body>
 </html>
