--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="./css/style.css">
+
         <title>html-css-toboolist</title>
     </head>
 
     <body>
         <!-- HEADER -->
         <header>
-
+            
         </header>
         <!-- FINE HEADER -->
         <!-- MAIN -->
