--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap" rel="stylesheet">
@@ -17,7 +17,10 @@
     <body>
         <!-- HEADER -->
         <header>
-            
+            <div id="header-container">
+                <img class="header logo" src="./img/Logo.png" alt="toboolist-logo">
+                <h1 class="header titolo">Toboolist</h1>
+            </div>
         </header>
         <!-- FINE HEADER -->
         <!-- MAIN -->
