creazione input container nel main di "index.html"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <!-- FINE HEADER -->
         <!-- MAIN -->
         <main>
-
+            <div id="container">
+                <div id="input-container">
+                    <button id="button-1">Add Task</button>
+                    <button id="button-2">Add Section</button>
+                </div>
+            </div>
         </main>
         <!-- FINE MAIN -->
     </body>
