--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
         <!-- HEADER -->
         <header>
             <div id="header-container">
+                <!-- LOGO PRINCIPALE -->
                 <img class="header logo" src="./img/Logo.png" alt="toboolist-logo">
+                <!-- FINE LOGO PRINCIPALE -->
+                <!-- TITOLO DI PAGINA -->
                 <h1 class="header titolo">Toboolist</h1>
+                <!-- FINE TITOLO DI PAGINA -->
             </div>
         </header>
         <!-- FINE HEADER -->
         <!-- MAIN -->
         <main>
             <div id="container">
+                <!-- INPUT CONTAINER -->
                 <div id="input-container">
                     <button id="button-1">Add Task</button>
                     <button id="button-2">Add Section</button>
                 </div>
+                <!-- FINE INPUT CONTAINER -->
             </div>
         </main>
         <!-- FINE MAIN -->
