inserimento section ed h3 nel list container

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
                     <button id="button-2">Add Section</button>
                 </div>
                 <!-- FINE INPUT CONTAINER -->
+                <!-- CONTAINER LISTA PUNTATA -->
+                <div id="list-container">
+                    <section id="new-task">
+                        <h3 class="titolo-section">&#9207;New Task</h3>
+                    </section>
+                    <section id="today">
+                        <h3 class="titolo-section">&#9207;Today</h3>
+                    </section>
+                    <section id="upcoming">
+                        <h3 class="titolo-section">&#9207;Upcoming</h3>
+                    </section>
+                </div>
+                <!-- FINE CONTAINER LISTA PUNTATA -->
             </div>
         </main>
         <!-- FINE MAIN -->
