aggiunta commenti alle section del list container

--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
                 <!-- FINE INPUT CONTAINER -->
                 <!-- CONTAINER LISTA PUNTATA -->
                 <div id="list-container">
+                    <!-- SECTION 1 -->
                     <section id="new-task">
                         <h3 class="titolo-section">&#9207;New Task</h3>
                     </section>
+                    <!-- FINE SECTION 1 -->
+                    <!-- SECTION 2 -->
                     <section id="today">
                         <h3 class="titolo-section">&#9207;Today</h3>
                     </section>
+                    <!-- FINE SECTION 2 -->
+                    <!-- SECTION 3 -->
                     <section id="upcoming">
                         <h3 class="titolo-section">&#9207;Upcoming</h3>
                     </section>
+                    <!-- FINE SECTION 3 -->
                 </div>
                 <!-- FINE CONTAINER LISTA PUNTATA -->
             </div>
