inserimento ul nei section del list container

--- a/index.html
+++ b/index.html
@@ -39,18 +39,33 @@
                 <!-- CONTAINER LISTA PUNTATA -->
                 <div id="list-container">
                     <!-- SECTION 1 -->
-                    <section id="new-task">
+                    <section class="section-container">
                         <h3 class="titolo-section">&#9207;New Task</h3>
+                        <ul>
+                            <li><span class="entity-check">&check;</span> Quarterly Newsletter</li>
+                        </ul>
                     </section>
                     <!-- FINE SECTION 1 -->
                     <!-- SECTION 2 -->
-                    <section id="today">
+                    <section class="section-container">
                         <h3 class="titolo-section">&#9207;Today</h3>
+                        <ul>
+                            <li><span class="entity-check">&check;</span> Recruiting blog post</li>
+                            <li><span class="entity-check">&check;</span> Mobile app launch</li>
+                            <li><span class="entity-cross">&cross;</span> Interview John H.</li>
+                            <li><span class="entity-check">&check;</span> Summit update to mobile storefronts</li>
+                        </ul>
                     </section>
                     <!-- FINE SECTION 2 -->
                     <!-- SECTION 3 -->
-                    <section id="upcoming">
+                    <section class="section-container">
                         <h3 class="titolo-section">&#9207;Upcoming</h3>
+                        <ul>
+                            <li><span class="entity-cross">&cross;</span> Schedule meeting with Alex</li>
+                            <li><span class="entity-check">&check;</span> Homepage refresh</li>
+                            <li><span class="entity-check">&check;</span> Onboard new Sales team members</li>
+                            <li><span class="entity-check">&check;</span> Review editorial calendar</li>
+                        </ul>
                     </section>
                     <!-- FINE SECTION 3 -->
                 </div>
