--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     <section class="section-container">
                         <h3 class="titolo-section">&#9207;New Task</h3>
                         <ul>
-                            <li><span class="entity-check">&check;</span> Quarterly Newsletter</li>
+                            <li>
+                                <span class="entity-check">&check;</span>Quarterly Newsletter<span class="label-1">Editorial</span>
+                            </li>
                         </ul>
                     </section>
                     <!-- FINE SECTION 1 -->
@@ -50,10 +52,18 @@
                     <section class="section-container">
                         <h3 class="titolo-section">&#9207;Today</h3>
                         <ul>
-                            <li><span class="entity-check">&check;</span> Recruiting blog post</li>
-                            <li><span class="entity-check">&check;</span> Mobile app launch</li>
-                            <li><span class="entity-cross">&cross;</span> Interview John H.</li>
-                            <li><span class="entity-check">&check;</span> Summit update to mobile storefronts</li>
+                            <li>
+                                <span class="entity-check">&check;</span>Recruiting blog post<span class="label-1">Editorial</span>
+                            </li>
+                            <li>
+                                <span class="entity-check">&check;</span>Mobile app launch<span class="label-2">Q1 Goals</span>
+                            </li>
+                            <li>
+                                <span class="entity-cross">&cross;</span>Interview John H.<span class="label-3">Recruiting</span>
+                            </li>
+                            <li>
+                                <span class="entity-check">&check;</span>Summit update to mobile storefronts<span class="label-4">Mobile</span>
+                            </li>
                         </ul>
                     </section>
                     <!-- FINE SECTION 2 -->
@@ -61,10 +71,18 @@
                     <section class="section-container">
                         <h3 class="titolo-section">&#9207;Upcoming</h3>
                         <ul>
-                            <li><span class="entity-cross">&cross;</span> Schedule meeting with Alex</li>
-                            <li><span class="entity-check">&check;</span> Homepage refresh</li>
-                            <li><span class="entity-check">&check;</span> Onboard new Sales team members</li>
-                            <li><span class="entity-check">&check;</span> Review editorial calendar</li>
+                            <li>
+                                <span class="entity-cross">&cross;</span>Schedule meeting with Alex
+                            </li>
+                            <li>
+                                <span class="entity-check">&check;</span>Homepage refresh<span class="label-5">Website</span>
+                            </li>
+                            <li>
+                                <span class="entity-check">&check;</span>Onboard new Sales team members<span class="label-6">Sales</span>
+                            </li>
+                            <li>
+                                <span class="entity-check">&check;</span>Review editorial calendar<span class="label-1">Editorial</span>
+                            </li>
                         </ul>
                     </section>
                     <!-- FINE SECTION 3 -->
