ottimizzazione classi html e codice di "style.css"

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div id="container">
                 <!-- INPUT CONTAINER -->
                 <div id="input-container">
-                    <button id="button-1">Add Task</button>
-                    <button id="button-2">Add Section</button>
+                    <button class="button button1">Add Task</button>
+                    <button class="button button2">Add Section</button>
                 </div>
                 <!-- FINE INPUT CONTAINER -->
                 <!-- CONTAINER LISTA PUNTATA -->
@@ -43,7 +43,7 @@
                         <h3 class="titolo-section">&#9207;New Task</h3>
                         <ul>
                             <li>
-                                <span class="entity-check">&check;</span>Quarterly Newsletter<span class="label-1">Editorial</span>
+                                <span class="entity check">&check;</span>Quarterly Newsletter<span class="label type1">Editorial</span>
                             </li>
                         </ul>
                     </section>
@@ -53,16 +53,16 @@
                         <h3 class="titolo-section">&#9207;Today</h3>
                         <ul>
                             <li>
-                                <span class="entity-check">&check;</span>Recruiting blog post<span class="label-1">Editorial</span>
+                                <span class="entity check">&check;</span>Recruiting blog post<span class="label type1">Editorial</span>
                             </li>
                             <li>
-                                <span class="entity-check">&check;</span>Mobile app launch<span class="label-2">Q1 Goals</span>
+                                <span class="entity check">&check;</span>Mobile app launch<span class="label type2">Q1 Goals</span>
                             </li>
                             <li>
-                                <span class="entity-cross">&cross;</span>Interview John H.<span class="label-3">Recruiting</span>
+                                <span class="entity cross">&cross;</span>Interview John H.<span class="label type3">Recruiting</span>
                             </li>
                             <li>
-                                <span class="entity-check">&check;</span>Summit update to mobile storefronts<span class="label-4">Mobile</span>
+                                <span class="entity check">&check;</span>Summit update to mobile storefronts<span class="label type4">Mobile</span>
                             </li>
                         </ul>
                     </section>
@@ -72,16 +72,16 @@
                         <h3 class="titolo-section">&#9207;Upcoming</h3>
                         <ul>
                             <li>
-                                <span class="entity-cross">&cross;</span>Schedule meeting with Alex
+                                <span class="entity cross">&cross;</span>Schedule meeting with Alex
                             </li>
                             <li>
-                                <span class="entity-check">&check;</span>Homepage refresh<span class="label-5">Website</span>
+                                <span class="entity check">&check;</span>Homepage refresh<span class="label type5">Website</span>
                             </li>
                             <li>
-                                <span class="entity-check">&check;</span>Onboard new Sales team members<span class="label-6">Sales</span>
+                                <span class="entity check">&check;</span>Onboard new Sales team members<span class="label type6">Sales</span>
                             </li>
                             <li>
-                                <span class="entity-check">&check;</span>Review editorial calendar<span class="label-1">Editorial</span>
+                                <span class="entity check">&check;</span>Review editorial calendar<span class="label type1">Editorial</span>
                             </li>
                         </ul>
                     </section>
